--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "echarts": "^4.9.0",
     "firebase": "^8.1.1",
     "leaflet": "^1.7.1",
+    "mdbvue": "^6.7.2",
     "metismenujs": "^1.2.1",
     "simplebar-vue": "^1.6.0",
     "sweetalert2": "^10.10.1",
