Loading dialog getting courses data

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-apexcharts": "^1.6.0",
     "vue-chartist": "^2.3.1",
     "vue-chartjs": "^3.5.1",
+    "vue-dialog-loading": "^0.5.3",
     "vue-easy-lightbox": "^0.13.0",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-form-wizard": "^0.8.4",
